Avoid overflow of subscription form on small screen

--- a/_style/_settings.scss
+++ b/_style/_settings.scss
@@ -17,4 +17,5 @@ $blue-grey     : #37474F;
 $blue          : #455A64;
 $yellow        : #EFEBE9;
 $pink          : #E6003C;
+$light-pink    : #F7EDF2;
 $purple        : #490A66;
